[multiple changes]

2005-07-15  Andrew Pinski  <pinskia@physics.uc.edu>

        PR middle-end/22398
        * gcc.c-torture/compile/pr22398.c: New test.

2005-07-11  Andrew Pinski  <pinskia@physics.uc.edu>

        PR middle-end/22398
        * fold-const.c (build_range_check): Convert high/low to etype
        if we are only comparing against exp.

From-SVN: r102067